css/style.css
body{
    font-family: "Open Sans", sans-serif;
}
#nav-header {

    border-bottom: 4px solid #FFD500;
}
#body-container{
    margin-top: 50px;
}

#home-intro{

}

.bgimagerow{
    margin-right: 0px;
    margin-left: 0px;
}

.bgimage {
    background-image: url('../img/pg-26-ukraine-getty.png');
    background-size: 100%;
    height: 338px;
    padding-right: 0px;
    padding-left: 0px;
}
.bgimage-inside {
    height: 338px;
    background: linear-gradient(to bottom, #14babd 0%, rgba(20, 186, 189, 0.3) 50%, rgba(20, 186, 189, 0) 100%) !important;
}

.bgimage-text {
    font-family: "Open Sans", sans-serif;
    font-weight: normal;
    font-style: normal;

    color: #ffffff;

    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.15);
    padding-left: 35px;
    padding-right: 35px;
    padding-top: 20px;
}
.bgimage-text .line1{
    font-size: 24px;
    line-height: 30px;
}
.bgimage-text .line2{
    padding-top: 10px;
    font-size: 24px;
    line-height: 30px;
}
.panel-info {
    border-color: #005BBB;
    border-radius: 0px;
}
.panel-info>.panel-heading {
    color: #ffffff;
    background-color: #005BBB;
    border-color: #005BBB;
    border-top-left-radius: 0px;
    border-top-right-radius: 0px;
}

.navbar {
    background-color: #005BBB;
    border-radius: 0px;
    margin-bottom: 0px;
    border: 0px;
}
.navbar-default .navbar-brand {
    color: #ffffff;
    font-size: 18pt;
    font-family: "Open Sans", sans-serif;
    font-weight: bold;
    padding-top:10px;
    padding-bottom:5px;
}
.navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus{
    background-color: transparent;
    color: #ffffff;
}
.navbar-default .navbar-brand small {
    color: #ffffff;
    font-size: 10pt;
    font-family: "Open Sans", sans-serif;
    font-weight: normal;
    display:block;
}
.navbar-default .navbar-nav li a {
    color: #ffffff;
    font-size: 10pt;
    font-family: "Open Sans", sans-serif;
}
.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover {
    color: #555;
    background-color: #FFD500;
}
.navbar-default .navbar-nav li .button-line {
    height: 100%;
    border-right: 1px solid #FFD500;
    position: absolute;
    left: 0;
    /* top: 50%; */
    margin-top: -15px;
}
.navbar-default .navbar-nav li a:hover {
    color: #ffffff;
}
.navbar-default .navbar-nav li .hover-color {
    position: absolute;
    top: 0;
    right: 0;
    height: 100%;
    width: 100%;
    webkit-transition: all 0.5s ease-in-out;
    -moz-transition: all 0.5s ease-in-out;
    -o-transition: all 0.5s ease-in-out;
    transition: all 0.5s ease-in-out;
}
.navbar-nav>li>.dropdown-menu{
    background-color: #005BBB;
    color: #FFF;
}
.navbar-nav>li>.dropdown-menu > li > a:hover, .navbar-nav>li>.dropdown-menu > li > a:focus {
    background-color:#005BBB;
    color: #000000;
}
h1,h2,h3,h4{
    color: #005BBB;
    font-family: "Helvetica Neue";
}
.page-header{
    padding-bottom: 9px;
    margin-top: 40px;
    margin-right: 0px;
    margin-bottom: 0px;
    margin-left: 0px;
    border-bottom: 0px;

}

/* Sticky footer styles
-------------------------------------------------- */
html {
    position: relative;
    min-height: 100%;
}
body {
    /* Margin bottom by footer height */
    margin-bottom: 60px;
}
.footer {
    position: absolute;
    bottom: 0;
    width: 100%;
    /* Set the fixed height of the footer here */
    height: 60px;
    background-color: #FFD500;
}

.footer-row{
    padding-top: 20px;
    font-size: 8pt;
    font-family: "Open Sans", sans-serif;
    font-weight: normal;
}

/* Timeline */
.timeline-axis text {
    font: 10px sans-serif;
}
.timeline-axis title {
    font-size: 10px;
}

.timeline-axis path,
.timeline-axis line {
    fill: none;
    stroke: #000;
    shape-rendering: crispEdges;
}
.timeline-bar {
    stroke-width: 0;
}
.timeline-circle {
    stroke-width: 0;
}

/* Brush */
.brush .extent {
    stroke: #8c8c8c;
    fill: #5e8ee9;
    fill-opacity: .1;
    shape-rendering: crispEdges;
}
.resize path {
    fill: #eee;
    stroke: #666;
}

.row-spacer{
    height:30px;
}
.form-group label {
    float: left;
    text-align: left;
    font-weight: normal;
}

.form-group select {
    display: inline-block;
    width: auto;
    vertical-align: middle;
}

.factbox{
    background: linear-gradient(to top, #14babd 10%, #005BBB) !important;
    margin-right: 0px;
    margin-left: 0px;
    color: rgba(255, 255, 255, 0.9);
}
.factbutton{
    /*background-color: rgba(0, 0, 0, 0.08);*/
}
.fact {
    /*background-color: #efefef;*/
    /*margin: 10px;*/
    background: linear-gradient(to top, #14babd 10%, #005BBB) !important;
    color: rgba(255, 255, 255, 0.9);;
    padding: 15px;
    text-align:justify;
    height: 220px;
}



/*********************/
/*  TOOLTIP OVERLAY  */
/*********************/

.tooltip-title {
    display: block;
    margin-bottom: 5px;
    font-weight: 600;
}

.d3-tip {
    line-height: 1;
    padding: 12px;
    background: rgba(0, 0, 0, 0.8);
    color: #fff;
    border-radius: 2px;
}

/* Creates a small triangle extender for the tooltip */
.d3-tip:after {

}

